<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@drawable/woodbackground">

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/white"
        android:visibility="visible" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:text="@string/article_title"
        android:textStyle="bold"
        android:textColor="#fcfcfc"
        android:textSize="32sp"
        android:gravity="center" />

    <ScrollView
        android:layout_width="391dp"
        android:layout_height="268dp"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="9dp">

        <TextView
            android:id="@+id/bodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/dummy_text"
            android:textSize="20sp" />

    </ScrollView>

    <Button
        android:id="@+id/factCheck"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_below="@+id/separator"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="23dp"
        android:text="@string/fact_check"
        android:background="@drawable/paperbackground"/>

    <Button
        android:id="@+id/finishedRead"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:layout_below="@+id/separator"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="63dp"
        android:text="@string/finished_read"
        android:background="@drawable/paperbackground"/>

    <Button
        android:id="@+id/submitTag"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_below="@+id/factCheck"
        android:layout_alignParentStart="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/paperbackground"
        android:text="@string/submit_tag" />

    <Button
        android:id="@+id/home"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/finishedRead"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="61dp"
        android:background="@drawable/paperbackground"
        android:text="@string/return_home" />

</RelativeLayout>