<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woodbackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/articlePageButton"
        android:layout_width="138dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/paperbackground"
        android:text="@string/article_page"
        app:layout_constraintBottom_toTopOf="@+id/Headlines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/fireBaseTestButton"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="91dp"
        android:background="@drawable/paperbackground"
        android:text="@string/fireBaseTester"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/articlePageButton" />

    <Button
        android:id="@+id/homepageButton"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/paperbackground"
        android:text="@string/home_page_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/articlePageButton"
        app:layout_constraintTop_toBottomOf="@+id/fireBaseTestButton"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/Headlines"
        android:layout_width="138dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/paperbackground"
        android:text="@string/HeadlinesJSON"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/back"
        android:gravity="center"
        android:text="@string/the_universal_telegram"
        android:textColor="@color/cream"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="337dp"
        android:layout_height="463dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        app:srcCompat="@drawable/utlogo"
        android:contentDescription="@string/universal_telegram_logo" />
</android.support.constraint.ConstraintLayout>